--- a/Agenda_DMOS5/app/src/main/res/layout/activity_contatos.xml
+++ b/Agenda_DMOS5/app/src/main/res/layout/activity_contatos.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".view.ContatosActivity">
 
-    <ListView
-        android:id="@+id/list_contatos"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerview_contatos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp" />
+    />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_adicionar_contato"
